Fix not jumping to anchor tag

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -11,8 +11,10 @@ h2 {
 }
 
 .anchor {
-  position: absolute;
-  top: 0;
+  display: block;
+  position: relative;
+  top: -150px;
+  visibility: hidden;
 }
 
 .heavy {
